# typo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
TypoChat.glyphsPlugin/Contents/: Info.plist
TypoChat.glyphsPlugin/Contents/Resources/: _version.py  plugin.py  provider.py  state.py  test.py  tools.py  utils.py
