[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typo-plugin"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.version]
path = "TypoChat.glyphsPlugin/Contents/Resources/_version.py"

[tool.hatch.build.targets.wheel]
bypass-selection = true
